[package]
name = "s3-dumper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
quick-xml = { version = "0.27.1", features = ["serialize"] }
reqwest = { version = "0.11.14", features = ["gzip", "deflate"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
